@@ -1,7 +1,10 @@
 2004-05-11 Paul Jakma <paul@dishone.st>
 
 	* Makefile.am: support for IOCTL_METHOD, as per Sowmini's patch.
-
+	* if_ioctl_solaris.c: Fixup some erroneous privilege changes and
+	  add privs.h header.
+	* ioctl_solaris.c: ditto
+	 
 2004-05-09 Paul Jakma <paul@dishone.st>
 
 	* zserv.c: (zsend_route_multipath) Set the nexthop_num
